--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
         
         body {
-            background: url('../../https://i.ibb.co/5vzfLYG/cropped-FB-IMG-1719392609615-1.jpg') no-repeat center center fixed;
+            background: url('https://i.ibb.co/5vzfLYG/cropped-FB-IMG-1719392609615-1.jpg') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Poppins', sans-serif;
             color: #fff;
